Fix size of intro section background on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -578,6 +578,10 @@ html {
 
     .intro-section {
         background-image: url("./components/small-intro-bg.jpg");
+        background-attachment: unset;
+        background-position: unset;
+        background-repeat: unset;
+        background-size: cover;
     }
 }
 
